fix spacing and article free snap mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,3 @@ h6 {
 .thumbnail .keen-slider__slide.active {
   border: 3px solid var(--color-primary);
 }
-
-/* .animate-slide-down {
-  animation: slideDown 0.4s ease-out forwards;
-} */
